Generator logic refactor